--- a/html/statbrowser.html
+++ b/html/statbrowser.html
@@ -28,18 +28,18 @@
 		scrollbar-shadow-color: #3b3b3b;
 	}
 
-	#menu {
+	#stat_menu {
 		background-color: #F0F0F0;
 		position: fixed;
 		width: 100%;
 		z-index: 100;
 	}
 
-	.dark #menu {
+	.dark #stat_menu {
 		background-color: #202020;
 	}
 
-	#statcontent {
+	#stat_content {
 		padding: 7px 7px 7px 7px;
 	}
 
@@ -233,9 +233,9 @@
 </style>
 </head>
 <body>
-<ul id="menu" class="button-container"></ul>
-<div id="under_menu"></div>
-<div id="statcontent"></div>
+<ul id="stat_menu" class="button-container"></ul>
+<div id="stat_submenu"></div>
+<div id="stat_content"></div>
 <script>
 // Polyfills and compatibility ------------------------------------------------
 var decoder = decodeURIComponent || unescape;
@@ -299,6 +299,12 @@ if (!String.prototype.trim) {
   }, 0, 'test');
 }())
 
+///////////////////////// CONSTANTS /////////////////////
+
+const ELEMENT_ID_MENU = "stat_menu"
+const ELEMENT_ID_SUBMENU = "stat_submenu"
+const ELEMENT_ID_CONTENT = "stat_content"
+
 // Status panel implementation ------------------------------------------------
 var status_tab_parts = ["Loading..."];
 var current_tab = null;
@@ -317,28 +323,95 @@ var turfcontents = [];
 var turfname = "";
 var imageRetryDelay = 500;
 var imageRetryLimit = 50;
-var menu = document.getElementById('menu');
-var under_menu = document.getElementById('under_menu');
-var statcontentdiv = document.getElementById('statcontent');
+var menu = document.getElementById(ELEMENT_ID_MENU);
+var stat_submenu = document.getElementById(ELEMENT_ID_SUBMENU);
+var statcontentdiv = document.getElementById(ELEMENT_ID_CONTENT);
 var storedimages = [];
 var split_admin_tabs = false;
 
 var connected = false;
 var commandQueue = [];
 
-// Any BYOND verb call must go through this, as if a verb is sent during reconnect then
-// it will cause the reconnect to fail.
-// This function will either call immediately, or queue until
-// BYOND confirms we are connected.
-function send_byond_command(command) {
-	var href = "byond://winset?command=" + command;
+///////////////////// BOOT //////////////////////////////
+window.onload = function() {
+	window_boot();
+};
 
-	if (connected) {
-		window.location.href = href;
-	} else {
-		commandQueue.push(href);
+function window_boot() {
+	transmit_ready()
+}
+
+//////////////// CALLED FROM BYOND //////////////////////
+
+/// called to request shutdown
+function byond_shutdown() {
+
+}
+
+/// called to request init
+function byond_init() {
+
+}
+
+/// called to request data update
+function byond_data() {
+
+}
+
+
+
+//////////////// TRANSMIT TO BYOND //////////////////////
+
+/// command queue
+var command_queue = [];
+
+/// direct send, do not use
+function __transmit_verb(cmd) {
+	var href = "byond://winset?command=" + cmd;
+	window.location.href = href;
+}
+
+/// queues or sends
+function transmit_verb(cmd) {
+	if(connected){
+		__transmit_verb(cmd);
+	}
+	else{
+		command_queue.push(cm)
 	}
 }
+
+/// immediate sends
+function transmit_href(action, data = null) {
+
+}
+
+/// flushes queue
+function transmit_flush_queue() {
+	for(let i = 0; i < command_queue.length; i++){
+		__transmit_verb(command_queue[i]);
+	}
+	command_queue.length = 0
+}
+
+/// informs byond we are ready
+function transmit_ready() {
+	transmit_verb(".statpanel_ready");
+}
+
+/////////////////////// STARTUP /////////////////////////
+
+//////////////////////// SHUTDOWN ///////////////////////
+
+/////////////////////// CONNECTION //////////////////////
+
+//////////////////////// MAIN ///////////////////////////
+
+//////////////////////// TABS ///////////////////////////
+
+
+///////////////////// DRAWING ///////////////////////////
+
 
 // Any BYOND commands that could result in the client's focus changing go through this
 // to ensure that when we relinquish our focus, we don't do it after the result of
@@ -403,7 +476,7 @@ function createStatusTab(name) {
 	//END ORDERING
 	menu.appendChild(B);
 	SendTabToByond(name);
-	under_menu.style.height = menu.clientHeight + 'px';
+	stat_submenu.style.height = menu.clientHeight + 'px';
 }
 
 function removeStatusTab(name) {
@@ -416,7 +489,7 @@ function removeStatusTab(name) {
 	}
 	menu.removeChild(document.getElementById(name));
 	TakeTabFromByond(name);
-	under_menu.style.height = menu.clientHeight + 'px';
+	stat_submenu.style.height = menu.clientHeight + 'px';
 }
 
 function sortVerbs() {
@@ -433,7 +506,7 @@ function sortVerbs() {
 }
 
 window.onresize = function () {
-	under_menu.style.height = menu.clientHeight + 'px';
+	stat_submenu.style.height = menu.clientHeight + 'px';
 }
 
 function addPermanentTab(name) {
@@ -528,7 +601,7 @@ function wipe_verbs() {
 
 function update_verbs() {
 	wipe_verbs();
-	send_byond_command("Update-Verbs");
+	transmit_verb("Update-Verbs");
 }
 
 function add_verb_list(v) {
@@ -608,12 +681,12 @@ function SendTabsToByond(){
 }
 
 function SendTabToByond(tab) {
-	send_byond_command("Send-Tabs " + tab);
+	transmit_verb("Send-Tabs " + tab);
 }
 
 //Byond can't have this tab anymore since we're removing it
 function TakeTabFromByond(tab) {
-	send_byond_command("Remove-Tabs " + tab);
+	transmit_verb("Remove-Tabs " + tab);
 }
 
 function update(global_data, ping_entry, other_entries) {
@@ -735,7 +808,7 @@ function tab_change(tab) {
 }
 
 function set_byond_tab(tab){
-	send_byond_command("Set-Tab " + tab);
+	transmit_verb("Set-Tab " + tab);
 }
 
 function draw_debug() {
@@ -745,16 +818,16 @@ function draw_debug() {
 	link.onclick = function() {wipe_verbs()};
 	link[textContentKey] = "Wipe All Verbs";
 	wipeverbstabs.appendChild(link);
-	document.getElementById("statcontent").appendChild(wipeverbstabs);
+	document.getElementById(ELEMENT_ID_CONTENT).appendChild(wipeverbstabs);
 	var wipeUpdateVerbsTabs = document.createElement("div");
 	var updateLink = document.createElement("a");
 	updateLink.onclick = function() {update_verbs()};
 	updateLink[textContentKey] = "Wipe and Update All Verbs";
 	wipeUpdateVerbsTabs.appendChild(updateLink);
-	document.getElementById("statcontent").appendChild(wipeUpdateVerbsTabs);
+	document.getElementById(ELEMENT_ID_CONTENT).appendChild(wipeUpdateVerbsTabs);
 	var text = document.createElement("div");
 	text[textContentKey] = "Verb Tabs:";
-	document.getElementById("statcontent").appendChild(text);
+	document.getElementById(ELEMENT_ID_CONTENT).appendChild(text);
 	var table1 = document.createElement("table");
 	for(var i=0; i < verb_tabs.length ; i++) {
 		var part = verb_tabs[i];
@@ -778,10 +851,10 @@ function draw_debug() {
 		tr.appendChild(td1);
 		table1.appendChild(tr);
 	}
-	document.getElementById("statcontent").appendChild(table1);
+	document.getElementById(ELEMENT_ID_CONTENT).appendChild(table1);
 	var header2 = document.createElement("div");
 	header2[textContentKey] = "Verbs:";
-	document.getElementById("statcontent").appendChild(header2);
+	document.getElementById(ELEMENT_ID_CONTENT).appendChild(header2);
 	var table2 = document.createElement("table");
 	for(var v = 0; v < verbs.length; v++) {
 		var part2 = verbs[v];
@@ -794,10 +867,10 @@ function draw_debug() {
 		trr.appendChild(tdd2);
 		table2.appendChild(trr);
 	}
-	document.getElementById("statcontent").appendChild(table2);
+	document.getElementById(ELEMENT_ID_CONTENT).appendChild(table2);
 	var text3 = document.createElement("div");
 	text3[textContentKey] = "Permanent Tabs:";
-	document.getElementById("statcontent").appendChild(text3);
+	document.getElementById(ELEMENT_ID_CONTENT).appendChild(text3);
 	var table3 = document.createElement("table");
 	for(var i=0; i < permanent_tabs.length ; i++) {
 		var part3 = permanent_tabs[i];
@@ -807,7 +880,7 @@ function draw_debug() {
 		trrr.appendChild(tddd1);
 		table3.appendChild(trrr);
 	}
-	document.getElementById("statcontent").appendChild(table3);
+	document.getElementById(ELEMENT_ID_CONTENT).appendChild(table3);
 
 }
 function draw_status() {
@@ -818,11 +891,11 @@ function draw_status() {
 	statcontentdiv[textContentKey] = '';
 	for(var i = 0; i < status_tab_parts.length; i++) {
 		if(status_tab_parts[i].trim() == "") {
-			document.getElementById("statcontent").appendChild(document.createElement("br"));
+			document.getElementById(ELEMENT_ID_CONTENT).appendChild(document.createElement("br"));
 		} else {
 			var div = document.createElement("div");
 			div[textContentKey] = status_tab_parts[i];
-			document.getElementById("statcontent").appendChild(div);
+			document.getElementById(ELEMENT_ID_CONTENT).appendChild(div);
 		}
 	}
 	//voting shitcode. See mc for more info.
@@ -850,11 +923,11 @@ function draw_status() {
 			tr.appendChild(td2);
 			table.appendChild(tr);
 		}
-		document.getElementById("statcontent").appendChild(table);
+		document.getElementById(ELEMENT_ID_CONTENT).appendChild(table);
 	}
 	if(verb_tabs.length == 0 || !verbs)
 	{
-		send_byond_command("Fix-Stat-Panel");
+		transmit_verb("Fix-Stat-Panel");
 	}
 }
 
@@ -879,7 +952,7 @@ function draw_mc() {
 		tr.appendChild(td2);
 		table.appendChild(tr);
 	}
-	document.getElementById("statcontent").appendChild(table);
+	document.getElementById(ELEMENT_ID_CONTENT).appendChild(table);
 }
 function update_tickets(T){
 	tickets = JSON.parse(T);
@@ -1030,7 +1103,7 @@ function draw_listedturf() {
 		table.appendChild(b);
 		table.appendChild(document.createElement("br"));
 	}
-	document.getElementById("statcontent").appendChild(table);
+	document.getElementById(ELEMENT_ID_CONTENT).appendChild(table);
 }
 
 function remove_listedturf() {
@@ -1060,7 +1133,7 @@ function draw_sdql2(){
 		tr.appendChild(td2);
 		table.appendChild(tr);
 	}
-	document.getElementById("statcontent").appendChild(table);
+	document.getElementById(ELEMENT_ID_CONTENT).appendChild(table);
 }
 
 function draw_tickets() {
@@ -1091,7 +1164,7 @@ function draw_tickets() {
 		tr.appendChild(td2);
 		table.appendChild(tr);
 	}
-	document.getElementById("statcontent").appendChild(table);
+	document.getElementById(ELEMENT_ID_CONTENT).appendChild(table);
 }
 
 function draw_interviews() {
@@ -1122,7 +1195,7 @@ function draw_interviews() {
 		statsDiv.appendChild(tr);
 	}
 	body.appendChild(statsDiv);
-	document.getElementById("statcontent").appendChild(body);
+	document.getElementById(ELEMENT_ID_CONTENT).appendChild(body);
 
 	// List interviews if any are open
 	var table = document.createElement("table");
@@ -1140,7 +1213,7 @@ function draw_interviews() {
 		tr.appendChild(td);
 		table.appendChild(tr);
 	}
-	document.getElementById("statcontent").appendChild(table);
+	document.getElementById(ELEMENT_ID_CONTENT).appendChild(table);
 }
 
 function draw_spells(cat) {
@@ -1165,13 +1238,13 @@ function draw_spells(cat) {
 		tr.appendChild(td2);
 		table.appendChild(tr);
 	}
-	document.getElementById("statcontent").appendChild(table);
+	document.getElementById(ELEMENT_ID_CONTENT).appendChild(table);
 }
 
 function make_verb_onclick(command) {
 	return function() {
 		run_after_focus(function() {
-			send_byond_command(command);
+			transmit_verb(command);
 		});
 	};
 }
@@ -1219,7 +1292,7 @@ function draw_verbs(cat){
 	}
 
 	// Append base table to view
-	var content = document.getElementById("statcontent");
+	var content = document.getElementById(ELEMENT_ID_CONTENT);
 	content.appendChild(table);
 
 	// Append additional sub-categories if relevant
@@ -1271,14 +1344,6 @@ document[addEventListenerKey]("keyup", restoreFocus);
 if(!current_tab) {
 	addPermanentTab("Status");
 	tab_change("Status");
-}
-
-window.onload = function() {
-	NotifyByondOnload();
-};
-
-function NotifyByondOnload() {
-	window.location.href = "byond://winset?command=Panel-Ready";
 }
 
 function create_debug(){
