--- a/html/statbrowser.html
+++ b/html/statbrowser.html
@@ -480,7 +480,7 @@ var active_tab;
 
 /// id for tab
 function id_tab(name) {
-	return "tab_" + name;
+	return "t_" + name;
 }
 
 /// ensure a tab is there
@@ -552,7 +552,7 @@ function draw_turf() {
 
 /// id for atom
 function id_atom(ref){
-	return "lt_" + ref;
+	return "a_" + ref;
 }
 
 function draw_atom(table, name, icon, ref){
