--- a/html/statbrowser.html
+++ b/html/statbrowser.html
@@ -335,8 +335,7 @@ function window_boot() {
 
 // for verbs ; tab name = list ( verb1, verb2, ... );
 var verbs = [];
-// for stat ; tab name = data
-var stat = [];
+// for stat ; list(entry, ...) ; entry: 1. text OR 2. text = text OR 3. [key, value, act]
 // admin href token
 var admin_token = null;
 
