--- a/html/statbrowser.html
+++ b/html/statbrowser.html
@@ -419,7 +419,7 @@ function byond_remove_verbs(data) {
 
 }
 
-/// called to init verbs: takes object of categories to lists of names
+/// called to init verbs: takes object of categories to lists of names. throws out any verbs not in this.
 function byond_init_verbs(data) {
 
 }
