--- a/html/statbrowser.html
+++ b/html/statbrowser.html
@@ -325,15 +325,6 @@ var stat_menu = document.getElementById(ELEMENT_ID_MENU);
 var stat_submenu = document.getElementById(ELEMENT_ID_SUBMENU);
 var stat_content = document.getElementById(ELEMENT_ID_CONTENT);
 
-// Status panel implementation ------------------------------------------------
-var href_token = null;
-var imageRetryLimit = 50;
-var storedimages = [];
-var split_admin_tabs = false;
-
-var connected = false;
-var commandQueue = [];
-
 ///////////////////// BOOT //////////////////////////////
 
 window.onload = function() {
@@ -350,6 +341,9 @@ function register_events() {
 	document[PROP_ADD_EVENT_LISTENER]("mouseup", winset_focus_map);
 	// restore focus after press
 	document[PROP_ADD_EVENT_LISTENER]("keyup", winset_focus_map);
+	window.onresize = function() {
+		stat_submenu.style.height = stat_menu.clientHeight + 'px';
+	}
 }
 
 /////////////////////// DATA ////////////////////////////
@@ -432,28 +426,73 @@ function byond_clear_tabs() {
 
 /// called to add verb
 function byond_add_verb(name, category) {
-
+	byond_add_verbs({name: category});
 }
 
 /// called to remove verb
 function byond_remove_verb(name, category) {
-
+	byond_remove_verbs({name: category});
 }
 
 /// called to add multiple verbs: same format as init verbs
-function byond_add_verbs(data) {
-
-
+function byond_add_verbs(data, force_draw) {
+	var had = force_draw || false;
+	for(var cat in data) {
+		if(cat == active_tab) {
+			had = true;
+		}
+		var arr = verbs[cat];
+		if(arr == undefined) {
+			arr = [];
+			verbs[cat] = arr;
+		}
+		for(var verb in data[cat]) {
+			if(arr.includes(verb)) {
+				continue;
+			}
+			arr.push(verb);
+		}
+		arr.sort(function(a, b) {
+			var a_up = a.toUpperCase();
+			var b_up = b.toUpperCase();
+			if(a_up < b_up) {
+				return 1;
+			}
+			if(a_up > b_up) {
+				return -1;
+			}
+			return 0;
+		})
+	}
 }
 
 /// called to remove multiple verbs: same format as init verbs
 function byond_remove_verbs(data) {
-
+	var had = false;
+	for(var cat in data) {
+		if(cat == active_tab) {
+			had = true;
+		}
+		var arr = verbs[cat];
+		if(arr == undefined) {
+			continue;
+		}
+		for(var verb in data[cat]) {
+			for(var i = arr.length - 1; i >= 0; --i) {
+				if(arr[i] != verb) {
+					continue;
+				}
+				arr.splice(i, 1);
+				break;
+			}
+		}
+	}
 }
 
 /// called to init verbs: takes object of categories to lists of names. throws out any verbs not in this.
 function byond_init_verbs(data) {
-
+	verbs = [];
+	byond_add_verbs(data, true);
 }
 
 /// called to remove listed turf
@@ -580,6 +619,8 @@ function redraw_content(){
 
 /// tabs
 var all_tabs = [];
+/// stat tabs
+var stat_tabs = [];
 /// active tab
 var active_tab;
 
@@ -892,53 +933,7 @@ function removeStatusTab(name) {
 	stat_submenu.style.height = stat_menu.clientHeight + 'px';
 }
 
-function sortVerbs() {
-	verbs.sort(function (a, b) {
-		var selector = a[0] == b[0] ? 1 : 0;
-		if (a[selector].toUpperCase() < b[selector].toUpperCase()) {
-			return 1;
-		}
-		else if (a[selector].toUpperCase() > b[selector].toUpperCase()) {
-			return -1;
-		}
-		return 0;
-	})
-}
 
-window.onresize = function () {
-	stat_submenu.style.height = stat_menu.clientHeight + 'px';
-}
-
-function addPermanentTab(name) {
-	if(!permanent_tabs.includes(name))
-		permanent_tabs.push(name);
-	createStatusTab(name);
-}
-
-function removePermanentTab(name) {
-	for (var i = permanent_tabs.length - 1; i >= 0; --i) {
-		if (permanent_tabs[i] == name) {
-			permanent_tabs.splice(i, 1);
-		}
-	}
-	removeStatusTab(name);
-}
-
-function checkStatusTab() {
-	for(var i=0; i < stat_menu.children.length; i++)
-		if(!verb_tabs.includes(stat_menu.children[i].id) && !permanent_tabs.includes(stat_menu.children[i].id))
-			stat_menu.removeChild(stat_menu.children[i]);
-}
-
-function remove_verb(v) {
-	var verb_to_remove = v; // to_remove = [verb:category, verb:name]
-	for(var i = verbs.length - 1; i >= 0; i--){
-		var part_to_remove = verbs[i];
-		if(part_to_remove[1] == verb_to_remove[1]){
-			verbs.splice(i, 1)
-		}
-	}
-}
 
 function check_verbs() {
 	for(var v = verb_tabs.length - 1; v >= 0; v--){
@@ -986,13 +981,6 @@ function verbs_cat_check(cat) {
 	}
 }
 
-function findVerbindex(name, verblist) {
-	for(var i = 0; i < verblist.length; i++) {
-		var part = verblist[i];
-		if(part[1] == name)
-			return i;
-	}
-}
 function wipe_verbs() {
 	verbs = [["", ""]];
 	verb_tabs = [];
@@ -1002,36 +990,6 @@ function wipe_verbs() {
 function update_verbs() {
 	wipe_verbs();
 	transmit_verb("Update-Verbs");
-}
-
-function add_verb_list(v) {
-	var to_add = JSON.parse(v); // list of a list with category and verb inside it
-	to_add.sort(); // sort what we're adding
-	for(var i = 0; i < to_add.length; i++) {
-		var part = to_add[i];
-		if(!part[0])
-			continue;
-		var category = part[0];
-		if (category.indexOf(".") != -1) {
-			var splitName = category.split(".");
-			if (split_admin_tabs && splitName[0] === "Admin")
-				category = splitName[1];
-			else
-				category = splitName[0];
-		}
-		if(findVerbindex(part[1], verbs))
-			continue;
-		if(verb_tabs.includes(category)){
-			verbs.push(part);
-			if(current_tab == category) {
-				draw_verbs(category); // redraw if we added a verb to the tab we're currently in
-			}
-		} else if(category) {
-			verb_tabs.push(category);
-			verbs.push(part);
-			createStatusTab(category);
-		}
-	}
 }
 
 function remove_verb_list(v) {
